# BazelSourceFramework

./: BUILD.bazel  README.md  WORKSPACE
MyModule/: SomeClass.swift
Sources/: Parent.swift
